SABADBAN-591 10 fix 581, 596, 605, 608, 623, 597(partial)

--- a/SabadBan/SabadBan/alarmDataCell.xib
+++ b/SabadBan/SabadBan/alarmDataCell.xib
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -76,6 +76,7 @@
                 </constraints>
             </tableViewCellContentView>
             <connections>
+                <outlet property="backgroundLayer" destination="WDK-AM-BMu" id="Y0f-KB-Lwe"/>
                 <outlet property="btnDelete" destination="yoP-SO-eIW" id="OpO-nj-4NG"/>
                 <outlet property="btnEdit" destination="UkJ-ey-jpX" id="vg8-cO-rVK"/>
                 <outlet property="lblPrice" destination="U63-NR-hV4" id="iUB-LX-oBh"/>
