--- a/SabadBan/SabadBan/BuyInfoCell.xib
+++ b/SabadBan/SabadBan/BuyInfoCell.xib
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -23,59 +23,70 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="8" translatesAutoresizingMaskIntoConstraints="NO" id="xfg-JX-AqQ">
-                        <rect key="frame" x="221" y="10" width="91" height="24"/>
-                        <fontDescription key="fontDescription" name="IRANSansMobileFaNum" family="IRANSansMobile(FaNum)" pointSize="15"/>
-                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="8" translatesAutoresizingMaskIntoConstraints="NO" id="u8X-4d-BdU">
-                        <rect key="frame" x="97" y="10" width="53" height="24"/>
-                        <fontDescription key="fontDescription" name="IRANSansMobileFaNum" family="IRANSansMobile(FaNum)" pointSize="15"/>
-                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="8" translatesAutoresizingMaskIntoConstraints="NO" id="u72-lp-xTb">
-                        <rect key="frame" x="155" y="10" width="53" height="24"/>
-                        <fontDescription key="fontDescription" name="IRANSansMobileFaNum" family="IRANSansMobile(FaNum)" pointSize="15"/>
-                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fyI-rp-T5Q">
-                        <rect key="frame" x="4" y="3" width="35" height="35"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dpQ-SY-PCW">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="8" translatesAutoresizingMaskIntoConstraints="NO" id="xfg-JX-AqQ">
+                                <rect key="frame" x="229" y="10" width="91" height="24"/>
+                                <fontDescription key="fontDescription" name="IRANSansMobileFaNum" family="IRANSansMobile(FaNum)" pointSize="15"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="8" translatesAutoresizingMaskIntoConstraints="NO" id="u72-lp-xTb">
+                                <rect key="frame" x="151" y="10" width="54" height="24"/>
+                                <fontDescription key="fontDescription" name="IRANSansMobileFaNum" family="IRANSansMobile(FaNum)" pointSize="15"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="8" translatesAutoresizingMaskIntoConstraints="NO" id="u8X-4d-BdU">
+                                <rect key="frame" x="93" y="10" width="53" height="24"/>
+                                <fontDescription key="fontDescription" name="IRANSansMobileFaNum" family="IRANSansMobile(FaNum)" pointSize="15"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="66X-Mt-doS">
+                                <rect key="frame" x="48" y="10" width="35" height="24"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="35" id="L2g-E1-prK"/>
+                                </constraints>
+                                <state key="normal" image="ic_edit_white"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fyI-rp-T5Q">
+                                <rect key="frame" x="0.0" y="10" width="35" height="24"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="35" id="ofZ-8V-hFO"/>
+                                </constraints>
+                                <state key="normal" image="ic_delete_white"/>
+                            </button>
+                        </subviews>
                         <constraints>
-                            <constraint firstAttribute="width" constant="35" id="ofZ-8V-hFO"/>
+                            <constraint firstItem="fyI-rp-T5Q" firstAttribute="leading" secondItem="dpQ-SY-PCW" secondAttribute="leading" id="6CG-4V-GRh"/>
+                            <constraint firstItem="xfg-JX-AqQ" firstAttribute="width" secondItem="dpQ-SY-PCW" secondAttribute="width" multiplier="2/7" id="BaC-pU-JVs"/>
+                            <constraint firstAttribute="trailing" secondItem="xfg-JX-AqQ" secondAttribute="trailing" id="De9-cD-mC1"/>
+                            <constraint firstItem="u8X-4d-BdU" firstAttribute="width" secondItem="dpQ-SY-PCW" secondAttribute="width" multiplier="1:6" id="Fnf-uY-bfJ"/>
+                            <constraint firstItem="u72-lp-xTb" firstAttribute="centerY" secondItem="dpQ-SY-PCW" secondAttribute="centerY" id="Glb-bC-ppu"/>
+                            <constraint firstItem="u72-lp-xTb" firstAttribute="width" secondItem="dpQ-SY-PCW" secondAttribute="width" multiplier="1:6" id="IOU-uF-ikw"/>
+                            <constraint firstItem="66X-Mt-doS" firstAttribute="centerY" secondItem="dpQ-SY-PCW" secondAttribute="centerY" id="NT7-ff-8Zd"/>
+                            <constraint firstItem="fyI-rp-T5Q" firstAttribute="centerY" secondItem="dpQ-SY-PCW" secondAttribute="centerY" id="UNn-SL-TDC"/>
+                            <constraint firstItem="u8X-4d-BdU" firstAttribute="centerY" secondItem="dpQ-SY-PCW" secondAttribute="centerY" id="Wid-jb-QaS"/>
+                            <constraint firstItem="u72-lp-xTb" firstAttribute="leading" secondItem="u8X-4d-BdU" secondAttribute="trailing" constant="5" id="btX-h5-b2D"/>
+                            <constraint firstItem="u8X-4d-BdU" firstAttribute="leading" secondItem="66X-Mt-doS" secondAttribute="trailing" constant="10" id="d9C-jf-Wbb"/>
+                            <constraint firstItem="xfg-JX-AqQ" firstAttribute="centerY" secondItem="dpQ-SY-PCW" secondAttribute="centerY" id="nMZ-GX-uZw"/>
+                            <constraint firstItem="66X-Mt-doS" firstAttribute="leading" secondItem="fyI-rp-T5Q" secondAttribute="trailing" constant="13" id="pkX-xX-sXy"/>
                         </constraints>
-                        <state key="normal" image="Delete"/>
-                    </button>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="66X-Mt-doS">
-                        <rect key="frame" x="52" y="4" width="35" height="35"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="35" id="L2g-E1-prK"/>
-                        </constraints>
-                        <state key="normal" image="Edit"/>
-                    </button>
+                    </view>
                 </subviews>
                 <color key="backgroundColor" red="0.16862745100000001" green="0.2274509804" blue="0.36078431370000003" alpha="1" colorSpace="calibratedRGB"/>
                 <constraints>
-                    <constraint firstItem="xfg-JX-AqQ" firstAttribute="trailing" secondItem="iuB-G9-LyX" secondAttribute="trailingMargin" id="0OD-rd-tQq"/>
-                    <constraint firstItem="u8X-4d-BdU" firstAttribute="width" secondItem="iuB-G9-LyX" secondAttribute="width" multiplier="1/6" id="1zM-6H-gkV"/>
-                    <constraint firstItem="xfg-JX-AqQ" firstAttribute="width" secondItem="iuB-G9-LyX" secondAttribute="width" multiplier="2/7" id="8WZ-2z-zGe"/>
-                    <constraint firstItem="u8X-4d-BdU" firstAttribute="leading" secondItem="66X-Mt-doS" secondAttribute="trailing" constant="10" id="EYd-H6-7pW"/>
-                    <constraint firstItem="xfg-JX-AqQ" firstAttribute="baseline" secondItem="u72-lp-xTb" secondAttribute="baseline" id="IkN-GC-n9Q"/>
-                    <constraint firstItem="66X-Mt-doS" firstAttribute="leading" secondItem="fyI-rp-T5Q" secondAttribute="trailing" constant="13" id="RK4-c4-GQ7"/>
-                    <constraint firstItem="fyI-rp-T5Q" firstAttribute="top" secondItem="66X-Mt-doS" secondAttribute="top" constant="-1" id="UCs-Dp-WK1"/>
-                    <constraint firstItem="fyI-rp-T5Q" firstAttribute="centerY" secondItem="66X-Mt-doS" secondAttribute="centerY" constant="-1" id="VnT-XC-Svf"/>
-                    <constraint firstItem="66X-Mt-doS" firstAttribute="top" secondItem="iuB-G9-LyX" secondAttribute="topMargin" constant="-4" id="XqM-EU-5LW"/>
-                    <constraint firstItem="66X-Mt-doS" firstAttribute="centerY" secondItem="u8X-4d-BdU" secondAttribute="centerY" constant="-1" id="cug-QM-Qst"/>
-                    <constraint firstItem="u72-lp-xTb" firstAttribute="leading" secondItem="u8X-4d-BdU" secondAttribute="trailing" constant="5" id="jbB-m1-APq"/>
-                    <constraint firstItem="fyI-rp-T5Q" firstAttribute="centerY" secondItem="iuB-G9-LyX" secondAttribute="centerY" constant="-1" id="joq-v7-SG7"/>
-                    <constraint firstItem="u72-lp-xTb" firstAttribute="width" secondItem="iuB-G9-LyX" secondAttribute="width" multiplier="1/6" id="ptf-WL-cDk"/>
-                    <constraint firstItem="u8X-4d-BdU" firstAttribute="baseline" secondItem="u72-lp-xTb" secondAttribute="baseline" id="qV9-KU-dGh"/>
-                    <constraint firstItem="fyI-rp-T5Q" firstAttribute="leading" secondItem="iuB-G9-LyX" secondAttribute="leading" constant="4" id="sGj-Pj-DV7"/>
+                    <constraint firstItem="dpQ-SY-PCW" firstAttribute="leading" secondItem="iuB-G9-LyX" secondAttribute="leading" id="1Fs-rx-gtg"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="dpQ-SY-PCW" secondAttribute="bottom" id="YhG-Bf-eA1"/>
+                    <constraint firstItem="dpQ-SY-PCW" firstAttribute="top" secondItem="iuB-G9-LyX" secondAttribute="top" id="dPp-oX-DKA"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="dpQ-SY-PCW" secondAttribute="trailing" id="e3F-Ox-QRW"/>
                 </constraints>
+                <edgeInsets key="layoutMargins" top="0.0" left="0.0" bottom="0.0" right="0.0"/>
             </tableViewCellContentView>
             <connections>
+                <outlet property="backgroundLayer" destination="dpQ-SY-PCW" id="Omi-i7-grs"/>
                 <outlet property="btnDelete" destination="fyI-rp-T5Q" id="uPE-bH-GdE"/>
                 <outlet property="btnEdit" destination="66X-Mt-doS" id="jzI-nD-KVc"/>
                 <outlet property="lblCount" destination="u8X-4d-BdU" id="TOU-LB-97o"/>
@@ -86,7 +97,7 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="Delete" width="100" height="100"/>
-        <image name="Edit" width="100" height="100"/>
+        <image name="ic_delete_white" width="24" height="24"/>
+        <image name="ic_edit_white" width="24" height="24"/>
     </resources>
 </document>
